--- a/styles/style.css
+++ b/styles/style.css
@@ -37,14 +37,15 @@ body {
   width: 30%;
 }
 .content {
-  display: grid;
-  grid-template-columns: 20% 20% 20%;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  padding-top: 80px;
+  padding-top: 30px;
   background-color: #fcfbfb;
   flex: 1;
   gap: 30px;
-  padding-bottom: 70px;
+  padding: 40px;
+  padding-bottom: 30px;
 }
 .footer {
   display: flex;
@@ -70,12 +71,13 @@ body {
 .card {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 330px;
   height: 355px;
   background-color: white;
   border: 1px solid #efefef;
   border-radius: 4px;
   box-shadow: -3px 3px 19px -7px rgb(230, 230, 230);
+  overflow: auto;
 }
 .card-image {
   height: 45%;
@@ -86,6 +88,7 @@ body {
 .card-content {
   padding: 22px;
   color: rgb(43, 43, 43);
+  height: 100%;
 }
 .card-title {
   display: block;
@@ -96,4 +99,34 @@ sub {
   padding-top: 10px;
   color: rgb(51, 14, 196);
   float: right;
+}
+
+p {
+  border-bottom: 1px solid #ededed;
+  padding-bottom: 10px;
+  font-size: 1rem;
+}
+.blog-grid {
+  display: grid;
+  grid-template-areas:
+    "blog blog image"
+    "blog2 blog2 image";
+}
+.blog-1 {
+  grid-area: blog;
+}
+.blog-2 {
+  grid-area: blog2;
+}
+.image {
+  width: 60%;
+  grid-area: image;
+}
+@media (max-width: 750px) {
+  .blog-grid {
+    grid-template-areas:
+      "blog blog"
+      "image image"
+      "blog2 blog2";
+  }
 }
